fix: overflow on alerts table

--- a/src/pages/overview/overview.css
+++ b/src/pages/overview/overview.css
@@ -15,6 +15,7 @@
 main {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #left-section {
@@ -78,7 +79,7 @@ main h2 {
 
 #alerts {
     padding: 10px;
-    width: 830px;
+    width: 750px;
 }
 
 #alerts > div:first-child {
@@ -107,8 +108,8 @@ th {
     color: var(--card-header);
 }
 td {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 30px;
 }
 
